--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 /app/src/main/res/values/secrets.xml
+/app/google-services.json
 .DS_Store
 /build
 /captures
